fixed navbar on mobile

--- a/src/Components/pages/Aboutme.css
+++ b/src/Components/pages/Aboutme.css
@@ -42,7 +42,7 @@
     float: right;
 }
 
-p {
+.about-me-p p {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 15px;
@@ -56,11 +56,11 @@ p {
         align-items: center;
         object-fit: contain;
     }
-    h1 {
+    .about-me-h1 h1 {
         margin-left: -100px;
         margin-right: -100px;
     }
-    p {
+    .about-me-p p {
         font-size: 15px;
         margin-left: -100px;
         margin-right: -100px;
